--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,15 @@ cffi==1.14.4
 click==7.1.2
 colorama==0.4.4
 decorator==4.4.2
+dnspython==2.0.0
+email-validator==1.1.2
 Faker==4.17.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+idna==2.10
 ipython==7.19.0
 ipython-genutils==0.2.0
 isort==5.6.4
