--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.0
 astroid==2.4.2
+autopep8==1.5.4
 backcall==0.2.0
 bcrypt==3.2.0
 blinker==1.4
@@ -31,6 +32,7 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.8
 psycopg2-binary==2.8.6
 ptyprocess==0.6.0
+pycodestyle==2.6.0
 pycparser==2.20
 Pygments==2.7.2
 pylint==2.6.0
